--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+unvanquished (0.20.0-1) unstable; urgency=low
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Thu, 03 Oct 2013 16:50:34 +0100
+
 unvanquished (0.19.0-2) unstable; urgency=low
 
   * Fix crashlog file location.
