--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ unvanquished (0.20.0-1) unstable; urgency=low
   * Add unvanquished-dev, initially containing only unvanquishedmap.
     (No manpages yet.)
   * Remove some cruft from debian/rules.
+  * Update build flags: use external opus where possible, no GLSL optimiser.
 
  -- Darren Salt <devspam@moreofthesa.me.uk>  Thu, 03 Oct 2013 16:50:34 +0100
 
