--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unvanquished (0.20.0-4) unstable; urgency=low
+
+  * Improve cleanup of /var/games/unvanquished when unvanquished-common is
+    purged. Files not added at install/upgrade/reconfigure are not removed.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Wed, 23 Oct 2013 14:44:41 +0100
+
 unvanquished (0.20.0-3) unstable; urgency=low
 
   * ‘Fix’ input of compose sequences (SDL 2.0).
