--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ unvanquished (0.20.0-4) unstable; urgency=low
 
   * Improve cleanup of /var/games/unvanquished when unvanquished-common is
     purged. Files not added at install/upgrade/reconfigure are not removed.
+  * /var/games/unvanquished/main is better owned by unvanquished-common.
 
  -- Darren Salt <devspam@moreofthesa.me.uk>  Wed, 23 Oct 2013 14:44:41 +0100
 
