Update Debian packaging.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+unvanquished (0.22.0-1) unstable; urgency=low
+
+  * Release of alpha 22.
+  * Dropped unvanquished-dev since it only contains daemonmap and that's now
+    in a separate repository. (It will be repackaged, though.)
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 01 Dec 2013 15:24:32 +0000
+
 unvanquished (0.21.0-2) unstable; urgency=low
 
   * Have unvanquished-common's config script require bash. The script
