--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unvanquished (0.22.1-1) unstable; urgency=low
+
+  * Alpha 22 point release. Bug fixes.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Tue, 03 Dec 2013 17:06:13 +0000
+
 unvanquished (0.22.0-1) unstable; urgency=low
 
   * Release of alpha 22.
