--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unvanquished (0.24.0-3) unstable; urgency=low
+
+  * Fix a bug which prevented install (but not upgrade) from succeeding.
+  * Fix configuration script regarding when it asks for the mirror name.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Tue, 04 Feb 2014 14:27:10 +0000
+
 unvanquished (0.24.0-2) unstable; urgency=low
 
   * Fix unvanquished-download-paks install location.
