--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unvanquished (0.25.0-1) unstable; urgency=low
+
+  * Release of alpha 25.
+  * Clean up build options in debian/rules.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 02 Mar 2014 18:42:55 +0000
+
 unvanquished (0.24.1-1) unstable; urgency=low
 
   * Point release.
