--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unvanquished (0.26.0-1) unstable; urgency=low
+
+  * Release of alpha 26.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 06 Apr 2014 23:24:30 +0100
+
 unvanquished (0.25.0-2) unstable; urgency=low
 
   * Pull in a few patches from git master, fixing font-related crashes.
