--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unvanquished (0.27.2-1) unstable; urgency=low
+
+  * Release of alpha 27.2.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Wed, 07 May 2014 16:55:05 +0100
+
 unvanquished (0.27.1-1) unstable; urgency=low
 
   * Release of alpha 27.1.
