--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+unvanquished (0.28.0-1) unstable; urgency=low
+
+  * Release of alpha 28.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Sun, 01 Jun 2014 14:38:35 +0100
+
 unvanquished (0.27.2-1) unstable; urgency=low
 
   * Release of alpha 27.2.
