--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+unvanquished (0.29.0-1) unstable; urgency=low
+
+  * Release of alpha 29.
+  * Update server config & map rotation.
+
+ -- Darren Salt <devspam@moreofthesa.me.uk>  Mon, 07 Jul 2014 18:45:18 +0100
+
 unvanquished (0.28.0-1) unstable; urgency=low
 
   * Release of alpha 28.
